<resources>
    <string name="app_name">Car Reminders</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="licence_plate">License Plate</string>
    <string name="brand_model">Brand, Model</string>
    <string name="usage">Usage</string>
    <string name="normal">Normal</string>
    <string name="taxi">Taxi</string>
    <string name="transport">Transport</string>
    <string name="insurance">Insurance</string>
    <string name="vehicle_inspection">Vehicle Inspection</string>
    <string name="road_tax">Road Tax</string>
    <string name="fire_extinguisher">Fire Extinguisher</string>
    <string name="medical_kit">Medical Kit</string>
    <string name="rate">Rate</string>
    <string name="oil">Oil Change</string>
    <string name="parking">Parking Pass</string>
    <string name="eairfilter">Engine Air Filter</string>
    <string name="cairfilter">Cabin Air Filter</string>
    <string name="battery">Battery</string>
    <string name="antifreeze">Antifreeze</string>
    <string name="tire">Tire Rotation</string>
    <string name="wiper">Windshield Wiper</string>

    <string name="add_button">Add Car</string>
    <string name="update_button">Update Car</string>
    <string name="delete_button">Delete Car</string>

    <string name="promptText">Enter the new value:</string>

    <string name="settings_text">Select when you want to receive notifications:</string>
    <string name="checkbox_one">One month before expiry date</string>
    <string name="checkbox_two">One week before expiry date</string>
    <string name="checkbox_three">One day before expiry date</string>
    <string name="save_settings">Save setting</string>

    <string name="sharing_string">Hey check out this app that i found: https://play.google.com/store/apps/details?id=com.mmproduction.abcd.carreminders"</string>
    <string name="toast_car_added">Car added to database</string>
    <string name="saved_setting">Settings saved</string>
    <string name="toast_car_updated">Car updated</string>
    <string name="toast_car_deleted">Car deleted</string>

    <string name="settings_text_language">Select the language:</string>
    <string name="language_english">English</string>
    <string name="language_romanian">Romanian</string>
    <string name="language_german">German</string>
    <string name="language_french">French</string>

    <string name="sidebar_add">Add a new car</string>
    <string name="sidebar_view_cars">View your cars</string>
    <string name="sidebar_view_events">View future events</string>
    <string name="sidebar_settings">View settings</string>
    <string name="sidebar_share_1">Share Car Reminders!</string>
    <string name="sidebar_share_2">Share</string>

    <string name="click_for_value">Click to edit</string>


</resources>
