<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/navAddNewCar" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/sidebar_add" />
        <item android:id="@+id/navViewYourCars" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/sidebar_view_cars" />
        <item android:id="@+id/navViewEvents" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/sidebar_view_events" />
        <item android:id="@+id/navSettings" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/sidebar_settings" />

    </group>

    <item android:title="@string/sidebar_share_1">
        <menu>
            <item android:id="@+id/navShare" android:icon="@android:drawable/ic_menu_share"
                android:title="@string/sidebar_share_2" />
        </menu>
    </item>

</menu>